update the paths

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,18 +1,18 @@
 [defaults]
 # Where to find roles
-roles_path=../roles/experimental:../roles/test:../roles/external:../roles/internal
+roles_path=roles/experimental:roles/test:roles/external:roles/internal
 
 # Where to find modules library
-library=../modules:/usr/share/ansible
+library=modules:/usr/share/ansible
 
 # Where to find callback modules
-callback_plugins=../callback
+callback_plugins=callback
 
 # Where to find lookup modules
-lookup_plugins=../extensions/ansible_plugins/lookup_plugins
+lookup_plugins=extensions/ansible_plugins/lookup_plugins
 
 # Where to find action modules
-action_plugins=/usr/share/ansible_plugins/action_plugins:../extensions/ansible_plugins/action_plugins
+action_plugins=/usr/share/ansible_plugins/action_plugins:extensions/ansible_plugins/action_plugins
 
 # Improve speed requires you disable ‘requiretty’ in /etc/sudoers on all managed hosts.
 pipelining=True
@@ -21,7 +21,7 @@ pipelining=True
 forks=10
 
 #Valut password
-vault_password_file=../.vpass
+vault_password_file=.vpass
 
 # Dont check for hosts
 host_key_checking=False
